--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
-    "prepare": "nuxi prepare"
+    "prepare": "nuxi prepare",
+    "generate": "nuxi generate"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.10",
